# open-remote-id-parser

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  README_zh-CN.md  SECURITY.md
.github/: mlc_config.json
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/demo/: build.gradle.kts
android/demo/src/main/: AndroidManifest.xml
android/demo/src/main/java/com/orip/demo/: MainActivity.kt  MainViewModel.kt  UAVDetailDialog.kt  UAVListAdapter.kt
android/demo/src/main/res/drawable/: bg_chip.xml  bg_chip_accent.xml  ic_drone.xml  ic_launcher_foreground.xml  ic_location.xml  ic_scan.xml  ic_stop.xml
android/demo/src/main/res/layout/: activity_main.xml  item_uav.xml
android/demo/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/orip/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/orip/src/main/: AndroidManifest.xml
android/orip/src/main/cpp/: CMakeLists.txt  orip_jni.cpp
android/orip/src/main/java/com/orip/: DataClasses.kt  Enums.kt  RemoteIDParser.kt
benchmarks/: bench_parser.cpp
data/: README.md
data/anomaly/: detection_scenarios.json
data/asd_stan/: operator_id.json
data/astm_f3411/: basic_id.json  location.json
data/boundary/: coordinate_limits.json
data/wifi/: beacon_frames.json
docs/progress/: 001-project-init.md  remaining-issues-checklist.md
docs/reports/: acceptance-report-v0.1.0.md
examples/: parse_demo.cpp  parse_demo_c.c
fuzz/: README.md  fuzz_parser.cpp
include/orip/: anomaly_detector.h  asd_stan.h  astm_f3411.h  bit_reader.h  cn_rid.h  orip.h  orip_c.h  parser.h  session_manager.h  trajectory_analyzer.h  types.h  wifi_decoder.h
python/: README.md  pyproject.toml
python/examples/: scanner_demo.py
python/orip/: __init__.py  _bindings.py  parser.py  types.py
python/tests/: test_orip.py
scripts/: build_release.sh
src/analysis/: anomaly_detector.cpp  trajectory_analyzer.cpp
src/core/: orip_c.cpp  parser.cpp  session_manager.cpp
src/protocols/: asd_stan.cpp  astm_f3411.cpp  cn_rid.cpp  wifi_decoder.cpp
src/utils/: bit_reader.cpp
tests/: test_analysis.cpp  test_asd_stan.cpp  test_astm_f3411.cpp  test_bit_reader.cpp  test_boundary.cpp  test_c_api.cpp  test_malicious_input.cpp  test_protocol_detection.cpp  test_thread_safety.cpp  test_wifi_decoder.cpp
